# archfuzz-riscv

./: README.md
board/: runner.c
fpga/: fpga_fuzz.ctrl.xdc  fpga_fuzz_ctrl.v  top.v  uart_rx.v  uart_tx.v
host/: .gitignore  BUILD_MING_W64.txt  BUILD_VISUAL_STUDIO_2022.md  CMakeLists.txt  common.h  logging.c  main.c  rigol.c  rigol.h  rigol_client.c  rl.c  rl.h  rl_host.c  serial.c  serial.h  waveform.c  waveform.h
